// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_ARCHIVED"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-1"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-1"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-2"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-2"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-3"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-3"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-4"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-4"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-5"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-5"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-6"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-6"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        
        
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        <div
          class="wrapper-message"
        >
          <span
            class="icon-check"
          />
          <div
            class="title-message"
          >
            You have no tasks
          </div>
          <div
            class="subtitle-message"
          >
            Sit back and relax
          </div>
        </div>
        
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        
        <div>
          
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
        </div>
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_PINNED"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-6"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-6"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-1"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-1"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-2"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-2"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-3"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-3"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-4"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-4"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-5"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  aria-label="pinTask-5"
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        
        
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;
